# Z8

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bench_io.js  bench_security.js  benchmark_results.md  build.ps1  build_error.txt  test_brotli.js  test_buffer_final.js  test_buffer_v24.js  test_duplex_from.js  test_each_method.js  test_events.js  test_flatmap.js  test_fs_stream.js  test_in.txt  test_input.txt  test_map_simple.js  test_new_features.js  test_os.js  test_passthrough.js  test_path_ext.js  test_process.js  test_readable_from.js  test_simple_collection.js  test_stream.js  test_stream_collections.js  test_stream_phase2.js  test_transform_methods.js  test_util.js  test_zlib_async.js  test_zlib_parity.js  test_zlib_promises.js  test_zlib_stream.js  test_zlib_utils.js  test_zstd.js  tmp_fix_destroy_style.ps1  tmp_fix_destroy_v8_error.ps1  (+7 more)
.github/workflows/: build.yml
Agent-Skills/z8-development/: SKILL.md
docs/: CODING_STYLE_en.md  CODING_STYLE_vi.md  OPTIMIZATION.md  TOOLS_GUIDE_vi.md
snyk/: 2026-02-07-fix-analysis.md  2026-02-07-fixes-summary.md  2026-02-07.txt
src/: config.h  main.cpp  task_queue.h  temporal_shims.cpp  thread_pool.h
src/module/: console.cpp  console.h  timer.cpp  timer.h
test/: error_test.js  small.js  test.js  test_async.mjs  test_events_abort.js  test_events_compat.js  test_events_final.js  test_fs.js  test_fs_extended.js
test/console/: dir.js  time.js  trace.js
test/fs/: test.js
test/os/: test_security_fix.js
tools/: README.md  check_style.py  extract_shims.py  install_hooks.py  pre-commit.py  setup.py
(+33 files in other folders)
